Desktop Nav Buttons Bug Fix
Buttons used $('section').length to determine when to stop displaying the Next button. After adding the mobile section, one could continue into empty space. Added an HTML attribute to desktop <section> tags and queried for those.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
   <div id='page'>
     <!-- Landing & About Me-->
-    <section id='landing'>
+    <section id='landing' section='desktop'>
       <!-- Promo Shot -->
       <div id='promoshot'>
         <img src='media/promoshot.png'>
@@ -138,7 +138,7 @@
         <p>２年が過ぎた現在は、自身を持ってて、色々なテクノロジー、フレームワークと、大事な社員に成れて開発者として私の成長が出来る会社に入社することを目指しています。私に興味があって、このウェブサイトをご覧頂き、誠にありがとうございます！宜しくお願いいたします！</p>
       </div>
     </section>
-    <section id='portfolio'>
+    <section id='portfolio' section='desktop'>
       <svg class='svgBackground' viewBox='0 0 100 100' preserveAspectRatio='none'>
         <defs>
           <radialGradient id="grad5">
@@ -351,7 +351,7 @@
         </div>
       </div>
     </section>
-    <section id='hobbies'>
+    <section id='hobbies' section='desktop'>
       <div id='videoContainer'>
         <video autoplay muted loop>
           <source src='media/hobbiesvideo.mp4' type='video/mp4'>
@@ -575,7 +575,7 @@
         </div>
       </div>
     </section>
-    <section id='contact'>
+    <section id='contact' section='desktop'>
       <div class="absoluteCenter">
         <svg class='svgBackground' viewBox='0 0 100 100' preserveAspectRatio='none'>
           <defs>
@@ -860,8 +860,8 @@
         <div class="contactRestrainer">        
           <div class="contactTextMobile">
             <div class="contactContainerMobile">
-              <p>Thank you from the bottom of my heart for taking the time to check everything out and for having an interest in me. To contact me, use the contact form on the left. You can also click the buttons below to check out my LinkedIn and GitHub!</p>
-              <p>私のポートフォリオサイトをご覧頂き、心から有難う御座います。右側にあるフォームでご連絡をお待ちしております。以後のボタンでLinkedIn、GitHubをご覧になる事も出来ます。</p>
+              <p>Thank you from the bottom of my heart for taking the time to check everything out and for having an interest in me. To contact me, use the contact form below. You can also click the buttons below to check out my LinkedIn and GitHub!</p>
+              <p>私のポートフォリオサイトをご覧頂き、心から有難う御座います。以後にあるフォームでご連絡をお待ちしております。以後のボタンでLinkedIn、GitHubをご覧になる事も出来ます。</p>
             </div>
             <div id="contactTextButtonsMobile">
               <a href='https://www.linkedin.com/in/sean-fried-4ba683171/'><i class="fab fa-linkedin"></i></a>
