Fixed github links pointing to old url

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
         </div>
         <div id="contactTextButtons">
           <a href='https://www.linkedin.com/in/sean-fried-4ba683171/'><i class="fab fa-linkedin"></i></a>
-          <a href='https://github.com/StarMech'><i class="fab fa-github-square"></i></a>
+          <a href='https://github.com/seanmwfried'><i class="fab fa-github-square"></i></a>
         </div>
       </div>
       <div class='contactForm' id='contactFormJapanese'>
@@ -865,7 +865,7 @@
             </div>
             <div id="contactTextButtonsMobile">
               <a href='https://www.linkedin.com/in/sean-fried-4ba683171/'><i class="fab fa-linkedin"></i></a>
-              <a href='https://github.com/StarMech'><i class="fab fa-github-square"></i></a>
+              <a href='https://github.com/seanmwfried'><i class="fab fa-github-square"></i></a>
             </div>
           </div>
         </div>
