Small content changes

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div id='aboutMeTextEnglish' class='aboutMeText'>
         <div>
           <h1>About Me</h1>
-          <p>My name is <span class='nameBlack'>Sean Matthew Wenzel Fried</span>, and I'm 31 years old!</p>
+          <p>My name is <span class='nameBlack'>Sean</span>, and I'm 31 years old!</p>
           <p>I suppose one could say I was introduced to computers was when I was 3 years of age and played Space Harrier 2 for the Sega Genesis for the first time (I beat it the third time I played, by the way, but I was 4 by then. #brag), but the first time I ever sat down in front of a computer and learned the DOS commands to get me to Dig Dug was at the age of 8.</p>
           <p>I continued to learn about computers throughout my youth, including taking as many computer classes my high school offered. I then proceeded to college to study Business Technology & Networking, with which I currently have an Associates. With school finished, I decided to work in the food industry while focusing on playing music and spent almost a decade touring across the United States performing songs I had written.</p>
           <p>At the beginning of 2017, I was approached by a friend to build a website for the company for which they worked. I had very limited knowledge at the time, but I knew that I could learn whatever I needed. While working on the project, I realized that I absolutely loved what I was doing, so I started NOLA Web Hosting with a friend to continue working with small, local businesses to provide them with affordable websites and hosting, and so I could continue gaining experience and work towards shifting my career to web development.</p>
