Fixed broken Linkedin link

--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
               <p>私のポートフォリオサイトをご覧頂き、心から有難う御座います。以後にあるフォームでご連絡をお待ちしております。以後のボタンでLinkedIn、GitHubをご覧になる事も出来ます。</p>
             </div>
             <div id="contactTextButtonsMobile">
-              <a href='https://www.linkedin.com/in/sean-fried-4ba683171/'><i class="fab fa-linkedin"></i></a>
+              <a href='https://www.linkedin.com/in/seanmwfried/'><i class="fab fa-linkedin"></i></a>
               <a href='https://github.com/seanmwfried'><i class="fab fa-github-square"></i></a>
             </div>
           </div>
